cargo-features = ["codegen-backend"]

[package]
name = "bevy_pg_editor_tools"
version = "0.1.0"
authors = ["Patrick Chodowski <chodowski.patrick@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Common editor tools"
resolver = "2"

[dependencies]
bevy = { version = "0.17", default-features = true, features = []}

log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
libm = "0.2.11"
serde = "1.0"
serde_json = "1.0"
bevy_enhanced_input = "0.19.3"
dyn-clone = "1.0.20"

[profile.dev]
opt-level = 1
